Fix position of anchor jumps

--- a/assets/main.css
+++ b/assets/main.css
@@ -70,12 +70,17 @@ h6 {
 :root {
   --content-max-width: 800px;
   --content-padding: 1.5rem;
+  --sticky-header-height: 6rem;
 
   --color-text: black;
   --color-text-invert: white;
   --color-primary: #ffb400;
   --color-secondary: #dc0067;
   --color-ternary: #009ee0;
+}
+
+html {
+  scroll-padding-top: var(--sticky-header-height);
 }
 
 body {
@@ -128,8 +133,8 @@ header {
   --content-height: 10vw;
 
   /* hack to make menu float */
-  margin-bottom: -6rem;
-  padding-bottom: 6rem;
+  margin-bottom: calc(var(--sticky-header-height) * -1);
+  padding-bottom: var(--sticky-header-height);
 
   svg {
     height: var(--content-height);
